[gd_scene load_steps=2 format=3 uid="uid://ddv43sflqayn8"]

[ext_resource type="Script" path="res://Scripts/Pause_Menu.gd" id="1_hyogy"]

[node name="Pause_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hyogy")

[node name="Continue" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -164.0
offset_right = 192.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
text = "CONTINUE"

[node name="Quit" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -68.0
offset_right = 192.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"

[node name="Desktop" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 28.0
offset_right = 192.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "DESKTOP
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -260.0
offset_right = 64.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "  = PAUSED =
"

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Desktop" to="." method="_on_desktop_pressed"]
